# tds-dispenser-arduino

DispenserScreen/: Beverage.h  CMakeLists.txt  Config.h  DispenserScreen.ino  MQTTManager.cpp  MQTTManager.h  UIBuilder.cpp  UIBuilder.h  filelist.txt  ui.c  ui.h  ui_SC00Registrar.c  ui_SC00Registrar.h  ui_SC01Pulsera.c  ui_SC01Pulsera.h  ui_SC02Selection.c  ui_SC02Selection.h  ui_SC03Dispensar.c  ui_SC03Dispensar.h  ui_SC04Finalizar.c  ui_SC04Finalizar.h  ui_comp.c  ui_comp.h  ui_comp_btnnextcomp.c  ui_comp_btnnextcomp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_selectbasic.c  ui_comp_selectbasic.h  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_back_arrow_png.c  ui_img_beer_mug_png.c  ui_img_cocktail_png.c  ui_img_enjoy_200_png.c  ui_img_generic_option_200_png.c  ui_img_naos_claro_h_png.c  ui_img_naos_oscuro_h_png.c  ui_img_pouring_200_png.c  (+7 more)
DispenserValves/: DispenserValves.ino
